# iqcc-calibration

./: .gitignore  OPTIMIZATION_REPORT.md  README.md  README_READOUT_PULSES.md  REFACTORING_PLAN.md  download_state_and_wiring_file.py  git_push_history_summary.md  iqcc_cloud_client-0.12.0-py3-none-any.whl  publish-package.sh  pyproject.toml  requirements.txt
calibration_graph/: 00_close_other_qms.py  00_hello_qua.py  01a_mixer_calibration.py  01a_time_of_flight.py  01b_time_of_flight_mw_fem.py  02a_resonator_spectroscopy.py  02b_resonator_spectroscopy_vs_power.py  02c_resonator_spectroscopy_vs_flux.py  03a_qubit_spectroscopy.py  03b_qubit_spectroscopy_vs_flux.py  03c_qubit_spectroscopy_vs_coupler_flux.py  03d_Qubit_Spectroscopy_vs_readout_amp.py  04a_rabi_chevron.py  04b_power_rabi.py  04d_Power_Rabi_general_operation.py  05_T1.py  06a_ramsey.py  06b_echo.py  07_iq_blobs.py  07a_readout_frequency_optimization.py  07b_readout_power_optimization.py  08_ramsey_vs_flux_calibration.py  08d_Stark_vs_DRAG_Calibration.py  09a_Stark_Detuning.py  09b_drag_calibration_180_minus_180.py  10a_single_qubit_randomized_benchmarking.py  10b_single_qubit_randomized_benchmarking_interleaved.py  10c_Single_Qubit_Randomized_Benchmarking_virtualZ.py  11a_Qubit_Spectroscopy_E_to_F.py  12b_Readout_Frequency_Optimization_G_E_F_vs_amp.py  12c_Ramsey_vs_Flux_pulse_duration.py  13a_Rabi_chevron_oscillations_4nS.py  22_Z_gate_error_amplification.py  23b_Z_crosstalk_pulsed_number.py  24_XY_crosstalk_time.py  29_Single_Qubit_Randomized_Benchmarking_fluxZ.py  30a_02_11_oscillations_4nS.py  30b_02_11_oscillations_1nS.py  31a_SNZ_calibration.py  32a_Cz_phase_calibration_frame.py  (+27 more)
calibration_graph_legacy/: 00_close_other_qms.py  00_hello_qua.py  01a_mixer_calibration.py  01b_time_of_flight.py  01b_time_of_flight_mw_fem.py  02a_Resonator_Spectroscopy.py  02b_resonator_spectroscopy_vs_flux.py  02c_resonator_spectroscopy_vs_amplitude.py  03a_Qubit_Spectroscopy.py  03b_qubit_spectroscopy_vs_flux.py  03c_qubit_spectroscopy_vs_coupler_flux.py  04_Power_Rabi.py  04c_Power_Rabi_arb_flux.py  05_T1.py  05b_T2ey.py  06_Ramsey.py  07a_Readout_Frequency_Optimization.py  07b_IQ_Blobs.py  07c_Readout_Power_Optimization.py  07d_Readout_Power_Time_Optimization.py  08_Ramsey_vs_Flux_Calibration.py  09a_Stark_Detuning.py  09b_DRAG_Calibration_180_minus_180.py  09c_DRAG_Calibration_180_90.py  09d_Stark_vs_DRAG_Calibration.py  10a_Single_Qubit_Randomized_Benchmarking.py  10b_Single_Qubit_Randomized_Benchmarking_Interleaved.py  10c_Single_Qubit_Randomized_Benchmarking_virtualZ.py  11a_Qubit_Spectroscopy_E_to_F.py  11d_Readout_Frequency_Optimization_G_E_F.py  11e_IQ_Blobs_G_E_F.py  11e_Readout_Frequency_Optimization_G_E_F_vs_detuning.py  12_cryoscope.py  12_cryoscope_frame.py  12a_cryoscope_arb.py  12b_cryosope_two_freqs.py  14_XY_Z_delay.py  14b_XY_Z_delay_4nS.py  21_Zgate_calibration.py  23a_Z_crosstalk_pulsed_amp.py  (+26 more)
calibration_utils/: calibration_runner.py
calibrations/: 000_system_analysis.py  00_close_other_qms.py  00_hello_qua.py  00_twpa_calibration.py  00_twpa_calibration_V1_wrongDSNR.py  00_twpa_calibration_V2_Dsnr_OPXasSA.py  00_twpa_calibration_V2_Dsnr_mean(noisefloor).py  00_twpa_calibration_V3_Dsnr_OPX_Blob.py  00_twpa_calibration_V3_Dsnr_std(Blob).py  00_twpa_calibration_snr.py  00_twpa_saturation.py  00a1_twpa_calibration_MTPLX_RO.py  00a1_twpa_calibration_MTPLX_RO_arbel.py  00a1_twpa_rough_calibration.py  00a2_twpa_fine_calibration.py  00a_twpa_calibration.py  00a_twpa_calibration_arbel.py  00a_twpa_calibration_gilboa_splitter.py  00b_twpa_gain_profile.py  00b_twpa_saturation (2).py  00b_twpa_saturation.py  00b_twpa_saturation_gilboa_splitter.py  00c_twpa_calibration.py  00d_twpa_fluctuation_overnight.py  01a_mixer_calibration.py  01a_time_of_flight.py  01b_time_of_flight_mw_fem.py  02a_resonator_spectroscopy.py  02b_resonator_spectroscopy_vs_flux.py  02b_resonator_spectroscopy_vs_power copy.py  02b_resonator_spectroscopy_vs_power.py  02c_resonator_spectroscopy_vs_flux.py  02d_resonator_spectroscopy_vs_amplitude_factor.py  03a_qubit_spectroscopy.py  03b_qubit_spectroscopy_vs_flux.py  03c_qubit_spectroscopy_vs_coupler_flux.py  03d_Qubit_Spectroscopy_vs_readout_amp.py  03e_Qubit_Spectroscopy_02.py  03e_qubits_spectroscopy_02.py  03f_Qubit_Spectroscopy_vs_power.py  (+181 more)
calibrations_demo/: 00_hello_qua.py  01_time_of_flight_mw_fem.py  02a_resonator_spectroscopy.py  02b_resonator_spectroscopy_vs_flux.py  03a_qubit_spectroscopy.py  03b_qubit_spectroscopy_vs_flux.py  04a_rabi_chevron.py  04b_power_rabi.py  05_T1.py  06a_ramsey.py  06b_echo.py  07_iq_blobs.py  08a_readout_frequency_optimization.py  08b_readout_power_optimization.py  09_ramsey_vs_flux_calibration.py  10b_drag_calibration_180_minus_180.py  11_single_qubit_randomized_benchmarking.py  13_cryoscope_frame.py  13b_cryoscope_qubit_spectroscopy.py  14b_XY_Z_delay_4nS.py  20_validate_fidelity_1Q_RB.py  80_calibration_graph_bringup_flux_tunable_transmon.py  README.md  digital_filters_calibration_graph.py  long_calibration_graph_flux_tunable_transmon.py  medium_calibration_graph_flux_tunable_transmon copy.py  short_calibration_graph_flux_tunable_transmon.py  short_graph_after_new_filters.py
circuit_utils/: __init__.py  combine.py  experiment.py  qubit_info.py  results.py
circuits/: hello_openqasm3_to_qua.py  test_rz_rotation.py  test_x_gate_parity.py
configuration/: populate_quam_lf_mw_fems.py  populate_quam_opxp_octave.py  wiring_lffem_mwfem.py  wiring_lffem_octave.py  wiring_mwfem_cross_resonance.py  wiring_opxp_external_mixers.py  wiring_opxp_octave.py
filters_pipeline/: digital_filters.py  ds1.h5  ds2.h5
iqcc_calibration_tools/: __init__.py
iqcc_research/: __init__.py
quam_state/: state.json
random_exp/: 01_Ramsey_vs_repeats_Calibration.py  02b_resonator_spectroscopy_vs_flux.py  (+14 more)
(+237 files in other folders)
