[project]
name = "iqcc_calibration_tools"
version = "0.1.0"
description = "calibration, research and integration tools for IQCC"
readme = "README.md"
authors = [
    {name = "Tom Dvir", email = "tom.dvir@quantum-machines.co"},
    {name = "Shlomi Matityahu", email = "Shlomi.Matityahu@quantum-machines.co"},
    {name = "Akiva Feintuch", email = "akiva@quantum-machines.co"},    
    {name = "Arthur Strauss", email = "Arthur.Strauss@quantum-machines.co"},
    {name = "Omrie Ovdat", email = "omrie.ovdat@quantum-machines.co"}
    
]
license = {text = "BSD-3-Clause"}
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11,<=3.12"
dependencies = [
    "quam==0.5.0a3",
    "qualang-tools==0.21.0",
    "xarray",
    "lmfit",
    "tqdm",
    "qualibrate>=1.0.0",
    "qm-qua==1.2.5",
    "ipykernel>=6.29.3,<7.0.0",
    "more-itertools",
    "qiskit==2.0.0",
    "pylatexenc",
    "iqcc-cloud-client==0.16.0",
    "iqcc-qualibrate2cloud",
    "quam-builder@git+https://github.com/qua-platform/quam-builder.git@IQCC-dev-12/25",
    "qualibration-libs@git+https://github.com/qua-platform/qualibration-libs.git@qualibrate-gte1-support",
    "betterproto>=2.0.0b7", # becuase qua 1.2.3 requires this pre-release version
]

# uv settings: https://docs.astral.sh/uv/reference/settings/
[tool.uv]
# link-mode controls how packages are placed in the venv.
# Options: "symlink" (default) | "hardlink" | "copy" | "clone"
# "symlink" — links .venv site-packages back to uv's global cache; fast and
#   space-efficient, but breaks on file-systems without symlink support.
# "copy" — duplicates files into the venv; uses more disk but works reliably
#   on Windows / WSL2 mounted drives and produces a self-contained .venv.
link-mode = "copy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["iqcc_calibration_tools"]

#[tool.uv.sources]
# Use a local editable checkout instead of the remote git source
#quam-builder = { path = "../quam-builder", editable = true }

# [tool.uv]
# Allow pre-release versions (e.g. betterproto beta wheels)
# prerelease = "allow"